src/objects/Beneficiaries__x.object
<CustomObject>
    <description>Beneficiaries - Workday</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.beneficiaries</externalName>
    <fields>
        <fullName>Employee__c</fullName>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>Employee</label>
        <length>20</length>
        <referenceTargetField>Contact.employee_id__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Beneficiaries</relationshipLabel>
        <relationshipName>workday_beneficiaries</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>beneficiary_name__c</fullName>
        <description>beneficiary_name</description>
        <externalDeveloperName>beneficiary_name</externalDeveloperName>
        <label>beneficiary_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>beneficiary_relationship__c</fullName>
        <description>beneficiary_relationship</description>
        <externalDeveloperName>beneficiary_relationship</externalDeveloperName>
        <label>beneficiary_relationship</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefit_elections__c</fullName>
        <description>benefit_elections</description>
        <externalDeveloperName>benefit_elections</externalDeveloperName>
        <label>benefit_elections</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <description>employee_id</description>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>employee_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <description>percent</description>
        <externalDeveloperName>percent</externalDeveloperName>
        <label>percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Beneficiaries - Workday</label>
    <listViews>
        <fullName>All</fullName>
        <columns>beneficiary_name__c</columns>
        <columns>beneficiary_relationship__c</columns>
        <columns>benefit_elections__c</columns>
        <columns>Employee__c</columns>
        <columns>employee_id__c</columns>
        <columns>id__c</columns>
        <columns>percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Beneficiaries - Workday</pluralLabel>
</CustomObject>